Updated portfolio with permanent Streamlit dashboard link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="project-card">
             <h3>📈 Public Consultation Feedback Dashboard</h3>
             <p>An interactive dashboard analyzing public sentiment trends using real-time data.</p>
-            <a href="https://shiny-guacamole-wr5vrp49qqpjfrjg-8501.app.github.dev/" 
+            <a href="https://public-feedback-dashboard.streamlit.app/#9abf6563" 
                target="_blank" class="project-button">
                 🔗 View Streamlit Dashboard
             </a>
