Updated CV link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="cv">
         <h2>My CV</h2>
         <p>You can view and download my CV below:</p>
-        <a href="https://docs.google.com/document/d/1-7ByjsAQcTO6qOerjMvntAN-QaUDLdLFZtSx6AFlQjw/export?format=pdf" 
+        <a href="https://docs.google.com/document/d/1-7ByjsAQcTO6qOerjMvntAN-QaUDLdLFZtSx6AFlQjw/edit?usp=sharing" 
            class="cv-button" 
            target="_blank">
            📄 View My CV
@@ -85,6 +85,15 @@
         <h2>Projects</h2>
     
         <div class="project-card">
+            <h3>📈 Public Consultation Feedback Dashboard</h3>
+            <p>An interactive dashboard analyzing public sentiment trends using real-time data.</p>
+            <a href="https://public-feedback-dashboard.streamlit.app/#9abf6563" 
+               target="_blank" class="project-button">
+                🔗 View Streamlit Dashboard
+            </a>
+        </div>
+
+        <div class="project-card">
             <h3>📊 Power BI Housing Analytics Dashboard</h3>
             <p>Developed a dashboard for affordable housing tracking, increasing data transparency.</p>
             <a href="https://app.powerbi.com/view?r=YOUR_POWER_BI_EMBED_URL" target="_blank" class="project-button">
@@ -97,15 +106,6 @@
             <p>Built an automated reporting system using AWS Lambda, reducing manual work.</p>
             <a href="http://YOUR_AWS_EC2_PUBLIC_IP" target="_blank" class="project-button">
                 🔗 View AWS Report
-            </a>
-        </div>
-    
-        <div class="project-card">
-            <h3>📈 Public Consultation Feedback Dashboard</h3>
-            <p>An interactive dashboard analyzing public sentiment trends using real-time data.</p>
-            <a href="https://public-feedback-dashboard.streamlit.app/#9abf6563" 
-               target="_blank" class="project-button">
-                🔗 View Streamlit Dashboard
             </a>
         </div>
     </section>
