--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="Antoinette_CV.pdf" download>Download CV</a></li>
+                <li><a href="#Antoinette_CV.pdf" download>Download CV</a></li>
             </ul>
         </nav>
     </header>
