--- a/index.html
+++ b/index.html
@@ -37,16 +37,13 @@
     
 
     <section id="about">
-        <section id="about">
-            <h2>About Me</h2>
-            <img src="profile.jpg" alt="Antoinette Hammond" class="profile-pic">
-            <p>
-            A data-driven professional with experience in the public sector, specialising in 
+        <h2>About Me</h2>
+        <img src="profile.jpg" alt="Antoinette Hammond" class="profile-pic">
+        <p> A data-driven professional with experience in the public sector, specialising in 
             data visualization, cloud technologies, and reporting. Skilled in Power BI, SQL, 
             and AWS to optimize workflows, analyze large datasets, and provide actionable 
-            insights that support decision-making.
-            </p>
-    </section>
+            insights that support decision-making.</p>
+    </section>    
 
     <section id="cv"> 
         <h2>My CV</h2>
