Fixed About Me title visibility and spacing

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
     </header>
     
     <section id="about">
-        
         <h2>About Me</h2>
         <img src="profile.jpg" alt="Antoinette Hammond" class="profile-pic">
-        <p> A data-driven professional with experience in the public sector, specialising in 
-            data visualization, cloud technologies, and reporting. Skilled in Power BI, SQL, 
-            and AWS to optimize workflows, analyze large datasets, and provide actionable 
-            insights that support decision-making.</p>
+        <p>
+            A data-driven professional with experience in the public sector, 
+            specialising in data visualization, cloud technologies, and reporting. 
+            Skilled in Power BI, SQL, and AWS to optimize workflows, analyze large 
+            datasets, and provide actionable insights that support decision-making.
+        </p>
     </section>    
 
     <section id="cv"> 
