Added Power BI Housing Analytics Project

--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
             </a>
         </div>
 
-        <div class="project-card">
-            <h3>📊 Power BI Housing Analytics Dashboard</h3>
-            <p>Developed a dashboard for affordable housing tracking, increasing data transparency.</p>
-            <a href="https://app.powerbi.com/view?r=YOUR_POWER_BI_EMBED_URL" target="_blank" class="project-button">
-                🔗 View Power BI Dashboard
-            </a>
-        </div>
+        <div class="project">
+            <h3>Power BI Housing Analytics Dashboard</h3>
+            <p>Analyzing UK housing affordability trends over time.</p>
+            <img src="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.gif" alt="Power BI Dashboard Demo">
+            <a href="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.pdf" download>Download Full Report</a>
+        </div>        
     
         <div class="project-card">
             <h3>🚀 AWS Lambda Automated Reporting</h3>
