Updated styling for Power BI project

--- a/index.html
+++ b/index.html
@@ -131,12 +131,16 @@
             </a>
         </div>
 
-        <div class="project">
+        <div class="project-card">
             <h3>Power BI Housing Analytics Dashboard</h3>
             <p>Analyzing UK housing affordability trends over time.</p>
-            <img src="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.gif" alt="Power BI Dashboard Demo">
-            <a href="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.pdf" download>Download Full Report</a>
-        </div>        
+            <img src="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.gif" 
+                 alt="Power BI Dashboard Demo" class="powerbi-gif">
+            <br>
+            <a href="https://github.com/ItIsNette/Portfolio-AH/raw/main/projects/housing-dashboard.pdf" 
+               class="download-button" download>Download Full Report</a>
+        </div>
+        
     
         <div class="project-card">
             <h3>🚀 AWS Lambda Automated Reporting</h3>
